--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,7 @@ option(C3_IS_NIX_BUILD "Is building with nix" OFF)
 set(C3_MIMALLOC_TAG "v1.7.3" CACHE STRING "Used version of mimalloc")
 option(C3_WITH_LLVM "Build with LLVM" ON)
 option(C3_LLD_DIR "Use custom LLD directory" "")
-option(LLVM_CRT_LIBRARY_DIR "Use custom llvm's compiler-rt directory" "")
+option(LLVM_CRT_LIBRARY_DIR "Use custom llvm's compiler-rt directory" "${LLVM_LIBRARY_DIR}/clang/${LLVM_MAJOR_VERSION}/lib/darwin")
 
 set(C3_USE_MIMALLOC OFF)
 if(C3_USE_MIMALLOC)
@@ -265,8 +265,6 @@ if(C3_WITH_LLVM)
         set(lld_libs ${lld_libs} xar)
         if (C3_IS_NIX_BUILD)
                 set(LLVM_CRT_LIBRARY_DIR "${LLVM_CRT_LIBRARY_DIR}/lib/darwin")
-        else()
-                set(LLVM_CRT_LIBRARY_DIR "${LLVM_LIBRARY_DIR}/clang/${LLVM_MAJOR_VERSION}/lib/darwin")
         endif()
         find_file(RT_ASAN_DYNAMIC NAMES libclang_rt.asan_osx_dynamic.dylib PATHS ${LLVM_CRT_LIBRARY_DIR})
         find_file(RT_TSAN_DYNAMIC NAMES libclang_rt.tsan_osx_dynamic.dylib PATHS ${LLVM_CRT_LIBRARY_DIR})
